[project]
name = "worker-tiktok-item"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "playwright-stealth>=1.0.6",
    "celery>=5.3",
    "httpx>=0.27",
]

[tool.setuptools]
py-modules = ["scraper", "extractor", "worker"]

[project.optional-dependencies]
dev = [
    "ipython",
]
